# rhiza-education

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
.rhiza/: history  template.yml
book/: book-plan.md
lessons/: 00-uv-and-uvx.md  00b-python-project-conventions.md  01-cicd-concepts.md  01-python-project-conventions.md  01-why-rhiza.md  01b-the-repo-zoo.md  02-core-concepts.md  02-uv-and-uvx.md  02-why-rhiza.md  03-core-concepts.md  03-getting-started.md  03-python-project-conventions.md  04-configuring-your-template.md  04-getting-started.md  04-why-rhiza.md  05-configuring-your-template.md  05-core-concepts.md  05-the-sync-lifecycle.md  06-customizing-safely.md  06-getting-started.md  06-the-sync-lifecycle.md  07-configuring-your-template.md  07-customizing-safely.md  08-the-rhiza-ecosystem.md  08-the-sync-lifecycle.md  09-customizing-safely.md  09-further-reading.md  09-renovate.md  10-customizing-safely.md  10-the-rhiza-ecosystem.md  11-further-reading.md  11-the-rhiza-ecosystem.md  12-further-reading.md  A1-gitlab-users.md  A2-marimushka.md  A2-projects-using-rhiza.md  A3-contributors.md  A3-projects-using-rhiza.md  A4-contributors.md  impressum.md  (+5 more)
lessons/slides/: cicd-intro.html  rhiza-deep-dive.html  rhiza-intro.html
slides/: Makefile  README.md  cicd-intro.md  rhiza-deep-dive.md  rhiza-intro.md
src/rhiza_education/: __init__.py  main.py
tests/: test_code_blocks.py
