[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhiza-education"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[tool.hatch.build.targets.wheel]
packages = ["src/rhiza_education"]
